k8s/apps/common/redis-commander/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-commander
        
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander:latest
  selector:
    matchLabels:
      app: redis-commander
