k8s/apps/common/redis-commander/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: redis
spec:
  type: ClusterIP
  selector:
    app: redis-commander
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
