k8s/apps/common/redis-commander/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-traefik
  namespace: redis
  annotations:
    "traefik.ingress.kubernetes.io/service.serversscheme": "http"
spec:
  ingressClassName: traefik
  rules:
  - host: redis.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port:
              number: 8081
  - host: redis.askaboutmydad.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port:
              number: 8081
