k8s/apps/common/redis-commander/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander
  namespace: redis
spec:
  ingressClassName: nginx
  rules:
  - host: redis.askaboutmydad.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-commander
            port:
              number: 8081
